changed prima in defconfig to no, as this device uses pronto.

--- a/arch/arm/configs/msm8929_sec_defconfig
+++ b/arch/arm/configs/msm8929_sec_defconfig
@@ -691,5 +691,5 @@ CONFIG_SEC_RESTRICT_ROOTING_LOG=y
 #TZ ICCC defines
 CONFIG_TZ_ICCC=y
 #wifi-prima
-CONFIG_PRIMA_WLAN=y
+CONFIG_PRIMA_WLAN=n
 CONFIG_PRONTO_WLAN=y
